components/kibana/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana-app
      component: kibana
  template:
    metadata:
      labels:
        app: kibana-app
        component: kibana
    spec:
      containers:
        - name: kibana
          resources:
            limits:
              cpu: '1'
              memory: 2Gi
            requests:
              cpu: 100m
              memory: 1Gi
          terminationMessagePolicy: File
          terminationMessagePath: /dev/termination-log
          readinessProbe:
            exec:
              command:
              - bash
              - -c
              - 'curl --fail http://localhost:5601/app/kibana -u $ELASTICSEARCH_USERNAME:$ELASTICSEARCH_PASSWORD'
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 30
          livenessProbe:
            exec:
              command:
              - bash
              - -c
              - 'curl --fail http://localhost:5601/app/kibana -u $ELASTICSEARCH_USERNAME:$ELASTICSEARCH_PASSWORD'
            initialDelaySeconds: 125
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 30
          ports:
            - name: kibana-ui
              containerPort: 5601
              protocol: TCP
          imagePullPolicy: IfNotPresent
          image: docker.elastic.co/kibana/kibana-oss:7.10.2
  strategy:
    type: Recreate
