components/kibana/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: kibana
spec:
  to:
    kind: Service
    name: kibana
  port:
    targetPort: kibana-ui
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
